kubernetes/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend-service
  namespace: sicei
spec:
  ports:
    - name: website-port
      port: 80
      protocol: TCP
      targetPort: 80
  selector:
    app: frontend
  type: ClusterIP
