kubernetes/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: frontend-ingress
  namespace: sicei
  labels:
    name: frontend-ingress
spec:
  ingressClassName: nginx
  rules:
    - host: sicei.abrahamespinosa.net
      http:
        paths:
          - backend:
              service:
                name: frontend-service
                port:
                  number: 80
            path: /
            pathType: Prefix
  tls:
    - hosts:
        - sicei.abrahamespinosa.net
      secretName: frontend-certificate
